# uav_offboard

./: Readme.md  launch_uav_offboard_node.md  ruckig_msg.txt  saved_topics.txt  start_micro_xrce_agent.sh  waypoints.csv  无人机子状态机流程复述.md
rapid_trajectory_generator/launch/: rapid_trajectory_test.launch.py
traj_offboard/: CMakeLists.txt
traj_offboard/config/: offboard_control.yaml
traj_offboard/include/traj_offboard/: online_traj_generator.h
traj_offboard/launch/: offboard_traj.launch.py
traj_offboard/msg/: TrajCompleteFlag.msg
traj_offboard/src/: offboard_control.cpp  online_traj_generator.cpp
traj_offboard/srv/: GetTrajectorySetpoint.srv  SetTarget.srv
uav_offboard_fsm/: CMakeLists.txt  package.xml
uav_offboard_fsm/config/: uav_offboard_fsm.yaml
uav_offboard_fsm/include/uav_offboard_fsm/: hold_adjust_velocity_limiter.hpp
uav_offboard_fsm/launch/: offboard_full.launch.py  uav_offboard_fsm.launch.py
uav_offboard_fsm/msg/: uavControlState.msg
uav_offboard_fsm/src/: ground_station_sim_node.cpp  keyboard_control_node.cpp  uav_offboard_fsm.cpp  whole_body_setpoint_rock_test_node.cpp
uav_offboard_fsm/test/: test_hold_adjust_velocity_limiter.cpp
vehicle_state_forward/: CMakeLists.txt  package.xml
vehicle_state_forward/launch/: vehicle_state_forward_launch.py
vehicle_state_forward/src/: vehicle_state_forward_node.cpp
waypoint_data_pkg/: CMakeLists.txt  package.xml
waypoint_data_pkg/msg/: WaypointData.msg
waypoint_data_pkg/src/: waypoint_receiver_node.cpp
